--- a/public/css/faq.css
+++ b/public/css/faq.css
@@ -11,7 +11,7 @@
 
 .faq-search-bar {
     position: absolute;
-    width:39%;
+    width: 39%;
     margin-top: 20px;
     margin-left: 5px;
     box-sizing: border-box;
@@ -31,11 +31,11 @@
     height: 50px;
 }
 
-.faq-search-bar input[type="text"]:hover{
+.faq-search-bar input[type="text"]:hover {
     border: 0.8px solid #a13c10;
 }
 
-.faq-search-bar input[type="text"]:focus{
+.faq-search-bar input[type="text"]:focus {
     border-color: #a13c10;
     box-shadow: 0 0 15px rgba(250, 178, 147, 0.5); 
     outline: none;
@@ -68,10 +68,23 @@
     padding-bottom: 50px;
 }
 
-.faq-title{
+.faq-title-add {
+    display: flex;
+    align-items: center; 
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
+
+.faq-add-button {
+    margin-left: 10px; 
+    align-self: flex-end; 
+}
+
+.faq-title {
     margin-left: 160px;
-    padding-top: 40px;
-    padding-bottom: 30px;
+    font-size: 1.4rem;
+    margin-right: 10px;
+    font-family: 'poppins-bolder';
 }
 
 .faq-section, .faq-subsection {
@@ -81,14 +94,19 @@
 
 .faq-header, .faq-subheader {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     cursor: pointer;
-    padding: 10px;
+    padding: 15px;
     background-color: #f9f9f9;
+    justify-content: space-between;
 }
 
-.faq-subheader{
+.seller-buttons {
+    display: flex;
+    align-items: center;
+}
+
+.faq-subheader {
     background-color: #fef2f0;
 }
 
@@ -96,20 +114,37 @@
     background-color: #e9e9e9;
 }
 
-.faq-subheader:hover{
+.faq-subheader:hover {
     background-color: #ffddd6;
 }
 
 .faq-content, .faq-subcontent {
     display: none;
-    padding: 10px;
+    padding: 15px;
+}
+
+.faq-edit-button {
+    margin-left: 13px;
+    text-decoration: none;
+}
+
+.faq-delete-button {
+    background-color: transparent;
+    border: none;
+    margin-left: 13px;
 }
 
 .arrow {
     font-size: 18px;
     transition: transform 0.3s ease;
+    margin-left: auto;
 }
 
 .collapsed .arrow {
     transform: rotate(-90deg);
+}
+
+@font-face {
+    font-family: 'poppins-bolder';
+    src: url('../assets/fonts/Poppins-Light.ttf') format('truetype');
 }
