Create register and reset password page
- email still cannot send, ignore this function first
- register and login can work, but still not prefect

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,8 +3,8 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
-main {
-    background-image: url("../images/loginbackground.png");
+.login-page {
+    background-image: url("/assets/images/loginbackground.png"); /* Ensure the path is correct */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
